[project]
name = "imr"
version = "0.1.0"
description = "IECE paper-demo training and hyperparameter search for the IMR model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modelscope>=1.37.1",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "torch>=2.9.0",
    "tqdm>=4.67.0",
    "transformers>=5.9.0",
]
